--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,22 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "module": "Node16",
-    "lib": ["ES2022"],
-    "moduleResolution": "Node16",
-    "rootDir": ".",
-    "outDir": "build",
-    "allowSyntheticDefaultImports": true,
-    "importHelpers": true,
-    "alwaysStrict": true,
-    "sourceMap": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "strictNullChecks": false
-  },
-  "include": ["src/**/*", "__tests__/**/*"]
-}
+   "compilerOptions": {
+     "target": "ES2019",
+     "module": "commonjs",
+     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+     "rootDir": ".",
+     "outDir": "build",
+     "allowSyntheticDefaultImports": true,
+     "importHelpers": true,
+     "alwaysStrict": true,
+     "sourceMap": true,
+     "forceConsistentCasingInFileNames": true,
+     "noFallthroughCasesInSwitch": true,
+     "noImplicitReturns": true,
+     "noUnusedLocals": true,
+     "noUnusedParameters": true,
+     "noImplicitAny": false,
+     "noImplicitThis": false,
+     "strictNullChecks": false
+   },
+   "include": ["src/**/*", "__tests__/**/*"]
+ }
